[package]
name = "resolution-common"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "stream"] }
anyhow = "1.0.98"
base64 = "0.22.1"
crc = "3.3.0"
iroh = { version = "0.35.0", features = ["discovery-local-network", "discovery-pkarr-dht"] }
oqs = { version = "0.11.0", features = ["vendored", "serde"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde"] }
