[package]
name = "resolution-common"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true, features = ["std", "stream"] }
anyhow = { workspace = true }
base64 = { workspace = true }
crc = { workspace = true }
iroh = { workspace = true, features = ["discovery-local-network", "discovery-pkarr-dht"] }
oqs = { workspace = true, features = ["vendored", "serde"] }
rmp = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
